# hermes-agent-plugin

./: README.md  __init__.py  adapter.py  after-install.md  plugin.yaml  pyproject.toml
tests/: test_adapter.py
