[project]
name = "kapso-hermes-plugin"
version = "0.1.3"
description = "Kapso WhatsApp platform adapter plugin for Hermes Agent"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "aiohttp>=3.9",
]

[project.optional-dependencies]
test = [
  "pytest>=8",
  "pytest-asyncio>=0.23",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
